--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
       background: #0d1117; 
       color: #c9d1d9; 
       font-family: system-ui, sans-serif; 
+      height: 100vh; 
+      overflow: hidden; 
     }
     .header { 
       text-align: center; 
@@ -23,28 +25,6 @@
     .layout { display: flex; height: calc(100vh - 90px); }
     .chart-container { flex: 3; min-width: 600px; position: relative; background: #161b22; }
     #chart { width: 100%; height: 100%; }
-    .drawing-toolbar { 
-      position: absolute; 
-      left: 5px; 
-      top: 50px; 
-      background: #21262d; 
-      border-radius: 8px; 
-      padding: 10px 5px; 
-      box-shadow: 0 4px 15px rgba(0,0,0,0.5); 
-      display: flex; 
-      flex-direction: column; 
-      gap: 10px; 
-      z-index: 10; 
-    }
-    .tool-icon { 
-      cursor: pointer; 
-      font-size: 1.5em; 
-      padding: 8px; 
-      border-radius: 6px; 
-      transition: all 0.2s; 
-    }
-    .tool-icon.active { background: #58a6ff; color: white; }
-    .tool-icon:hover { background: #30363d; }
     .sidebar { 
       flex: 1; 
       min-width: 300px; 
@@ -81,16 +61,6 @@
 
   <div class="layout">
     <div class="chart-container">
-      <div class="drawing-toolbar">
-        <div class="tool-icon active" data-tool="crosshair" title="Crosshair">+</div>
-        <div class="tool-icon" data-tool="line" title="Line">—</div>
-        <div class="tool-icon" data-tool="horizontal" title="Horizontal">—</div>
-        <div class="tool-icon" data-tool="trend" title="Trend">/</div>
-        <div class="tool-icon" data-tool="fib" title="Fib">F</div>
-        <div class="tool-icon" data-tool="rectangle" title="Rect">□</div>
-        <div class="tool-icon" data-tool="text" title="Text">T</div>
-        <div class="tool-icon" data-tool="trash" title="Clear">🗑</div>
-      </div>
       <div id="chart"></div>
     </div>
 
@@ -111,7 +81,7 @@
   </div>
 
   <script>
-    // === LIGHTWEIGHT CHARTS (TradingView-style) ===
+    // === LIGHTWEIGHT CHARTS (Daily only, last 7 days default) ===
     const chartElement = document.getElementById('chart');
     const chart = LightweightCharts.createChart(chartElement, {
       width: chartElement.clientWidth,
@@ -130,7 +100,7 @@
         horzLine: { color: '#ffffff33', width: 1 }
       },
       rightPriceScale: { borderColor: '#30363d' },
-      timeScale: { borderColor: '#30363d' }
+      timeScale: { borderColor: '#30363d', timeVisible: true, secondsVisible: false }
     });
 
     // Historical line (blue)
@@ -148,7 +118,7 @@
       title: 'Predicted (2-Year Forecast)'
     });
 
-    // Your flow data
+    // Your flow data (daily timestamps)
     const historicalData = [
       { time: '2017-01-01', value: 40 },
       { time: '2017-10-01', value: 45 },
@@ -163,7 +133,7 @@
     ];
     historicalSeries.setData(historicalData);
 
-    // Predicted data
+    // Predicted (extend 2 years, daily for scrollability)
     const predictedData = [
       { time: '2026-01-01', value: 51 },
       { time: '2026-04-01', value: 70 },
@@ -177,12 +147,24 @@
     ];
     predictedSeries.setData(predictedData);
 
-    // Resize chart
-    window.addEventListener('resize', () => {
-      chart.applyOptions({ width: chartElement.clientWidth, height: chartElement.clientHeight });
+    // Default zoom: last 7 days (mock last date as today)
+    const now = new Date();
+    const sevenDaysAgo = new Date(now);
+    sevenDaysAgo.setDate(now.getDate() - 7);
+    chart.timeScale().setVisibleRange({
+      from: sevenDaysAgo.getTime() / 1000,
+      to: now.getTime() / 1000
     });
 
-    // Live prices
+    // Resize chart
+    window.addEventListener('resize', () => {
+      chart.applyOptions({
+        width: chartElement.clientWidth,
+        height: chartElement.clientHeight
+      });
+    });
+
+    // Live prices (your key)
     async function fetchLiveData() {
       try {
         const response = await fetch('https://pro-api.coingecko.com/api/v3/coins/markets?vs_currency=usd&ids=bitcoin,ethereum,solana,bnb&order=market_cap_desc&per_page=4&page=1&sparkline=false&price_change_percentage=24h', {
