--- a/index.html
+++ b/index.html
@@ -8,145 +8,90 @@
   <script src="https://cdn.jsdelivr.net/npm/chartjs-adapter-date-fns/dist/chartjs-adapter-date-fns.bundle.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-annotation"></script>
   <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-zoom@2.0.1"></script>
+  <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-crosshair@1.2.0"></script> <!-- Added for crosshair -->
   <style>
     body { 
       font-family: system-ui, -apple-system, sans-serif; 
       margin: 0; 
       background: #0d1117; 
       color: #c9d1d9; 
-      line-height: 1.5; 
-      font-size: 1em; 
+      line-height: 1.6; 
     }
     .main-title { 
       text-align: center; 
       color: #58a6ff; 
-      margin: 20px 0 5px; 
-      font-size: 2.5em; 
+      margin: 30px 0 10px; 
+      font-size: 3em; 
       font-weight: 700; 
     }
     .subtitle { 
       text-align: center; 
       color: #8b949e; 
-      margin-bottom: 15px; 
-      font-size: 1.1em; 
+      margin-bottom: 30px; 
+      font-size: 1.3em; 
     }
     .container { 
       display: flex; 
       flex-wrap: wrap; 
-      gap: 20px; 
-      max-width: 1400px; 
+      gap: 30px; 
+      max-width: 1600px; 
       margin: 0 auto; 
-      padding: 0 15px; 
+      padding: 0 20px; 
     }
     .chart-area { 
       flex: 3; 
-      min-width: 600px; 
-      height: 600px; 
+      min-width: 700px; 
+      height: 800px; 
       background: #161b22; 
-      border-radius: 12px; 
-      padding: 15px; 
-      box-shadow: 0 8px 30px rgba(0,0,0,0.6); 
-      position: relative; 
+      border-radius: 16px; 
+      padding: 25px; 
+      box-shadow: 0 10px 40px rgba(0,0,0,0.6); 
     }
-    .time-buttons { 
-      text-align: center; 
-      margin-bottom: 10px; 
-    }
-    .time-btn { 
-      background: #21262d; 
-      color: #c9d1d9; 
-      border: 1px solid #30363d; 
-      padding: 6px 12px; 
-      margin: 0 3px; 
-      border-radius: 6px; 
-      cursor: pointer; 
-      transition: all 0.2s; 
-    }
-    .time-btn:hover, .time-btn.active { 
-      background: #58a6ff; 
-      color: white; 
-      border-color: #58a6ff; 
-    }
-    .drawing-toolbar { 
-      position: absolute; 
-      left: 0; 
-      top: 40px; 
-      background: #21262d; 
-      border-radius: 8px; 
-      padding: 10px 5px; 
-      box-shadow: 0 4px 15px rgba(0,0,0,0.5); 
-      display: flex; 
-      flex-direction: column; 
-      gap: 10px; 
-      z-index: 10; 
-    }
-    .tool-icon { 
-      cursor: pointer; 
-      font-size: 1.5em; 
-      padding: 8px; 
-      border-radius: 6px; 
-      transition: all 0.2s; 
-    }
-    .tool-icon.active { background: #58a6ff; color: white; }
-    .tool-icon:hover { background: #30363d; }
     .sidebar { 
       flex: 1; 
-      min-width: 300px; 
+      min-width: 340px; 
       background: #161b22; 
-      padding: 15px; 
-      border-radius: 12px; 
-      box-shadow: 0 8px 30px rgba(0,0,0,0.6); 
+      padding: 25px; 
+      border-radius: 16px; 
+      box-shadow: 0 10px 40px rgba(0,0,0,0.6); 
       overflow-y: auto; 
-      max-height: 600px; 
+      max-height: 800px; 
     }
     .status-badge { 
-      font-size: 2em; 
-      margin: 0 0 15px; 
-      padding: 10px; 
-      border-radius: 8px; 
+      font-size: 3em; 
+      margin: 0 0 30px; 
+      padding: 20px; 
+      border-radius: 16px; 
       text-align: center; 
       font-weight: 700; 
-      box-shadow: 0 4px 15px rgba(0,0,0,0.5); 
+      box-shadow: 0 6px 25px rgba(0,0,0,0.5); 
     }
     .price-item { 
-      margin: 10px 0; 
-      padding: 12px; 
-      border-radius: 8px; 
+      margin: 20px 0; 
+      padding: 18px; 
+      border-radius: 12px; 
       background: #21262d; 
       transition: all 0.2s; 
     }
     .price-item:hover { 
-      transform: translateY(-2px); 
-      box-shadow: 0 6px 20px rgba(0,0,0,0.4); 
+      transform: translateY(-4px); 
+      box-shadow: 0 8px 30px rgba(0,0,0,0.4); 
     }
-    #alertBox, #actionAdvice, #previousCalls, #predictionAccuracy { 
-      margin: 15px 0; 
-      padding: 12px; 
-      border-radius: 8px; 
-      font-size: 1.1em; 
-      box-shadow: 0 4px 15px rgba(0,0,0,0.4); 
+    #alertBox, #sellAdvice, #previousCalls, #predictionAccuracy { 
+      margin: 30px 0; 
+      padding: 20px; 
+      border-radius: 12px; 
+      font-size: 1.4em; 
+      box-shadow: 0 6px 25px rgba(0,0,0,0.4); 
     }
-    #actionAdvice { background: #2c0e0e; color: #ff6b6b; }
+    #sellAdvice { background: #2c0e0e; color: #ff6b6b; }
     #previousCalls { background: #161b22; border: 1px solid #30363d; }
     #predictionAccuracy { background: #161b22; border: 1px solid #30363d; text-align: center; }
-    #confidenceGauge { width: 150px; height: 150px; margin: 20px auto; }
-    .loading { color: #8b949e; text-align: center; margin: 15px 0; font-style: italic; }
-    .collapsible-section { margin: 10px 0; }
-    .collapsible-header { cursor: pointer; padding: 8px; background: #21262d; border-radius: 6px; font-weight: bold; transition: all 0.2s; }
-    .collapsible-content { display: none; padding: 8px; background: #161b22; border-radius: 0 0 6px 6px; }
-    .open .collapsible-content { display: block; }
-    .phase-toggle { 
-      background: #21262d; 
-      color: #c9d1d9; 
-      border: 1px solid #30363d; 
-      padding: 10px 15px; 
-      border-radius: 8px; 
-      cursor: pointer; 
-      margin-bottom: 15px; 
-      transition: all 0.2s; 
-    }
-    .phase-toggle.active { background: #58a6ff; color: white; border-color: #58a6ff; }
-    @media (max-width: 900px) { .container { flex-direction: column; } .sidebar { order: 2; } .chart-area { order: 1; height: 500px; } }
+    #confidenceGauge { width: 200px; height: 200px; margin: 30px auto; }
+    .phase-bar { height: 40px; width: 100%; margin: 0 0 20px 0; border-radius: 12px; overflow: hidden; display: flex; box-shadow: 0 4px 20px rgba(0,0,0,0.5); }
+    .phase-segment { flex: 1; display: flex; align-items: center; justify-content: center; font-weight: bold; color: white; text-shadow: 1px 1px 3px black; }
+    .loading { color: #8b949e; text-align: center; margin: 30px 0; font-style: italic; }
+    @media (max-width: 900px) { .container { flex-direction: column; } .sidebar { order: 2; } .chart-area { order: 1; } }
   </style>
 </head>
 <body>
@@ -155,31 +100,22 @@
 
   <div class="container">
     <div class="chart-area">
-      <div class="time-buttons">
-        <button class="time-btn" data-scale="15m">15m</button>
-        <button class="time-btn" data-scale="1h">1h</button>
-        <button class="time-btn" data-scale="4h">4h</button>
-        <button class="time-btn active" data-scale="day">Daily</button>
-        <button class="time-btn" data-scale="month">Monthly</button>
-        <button class="time-btn" data-scale="year">Yearly</button>
+      <div class="phase-bar">
+        <div class="phase-segment" style="background:#ff6b6b;">Euphoria</div>
+        <div class="phase-segment" style="background:#ffab91;">Thrill/Retail</div>
+        <div class="phase-segment" style="background:#8bc34a;">Belief/Breakout</div>
+        <div class="phase-segment" style="background:#fff176;">Hope</div>
+        <div class="phase-segment" style="background:#4caf50;">Current</div>
       </div>
       <canvas id="myChart"></canvas>
-      <button class="phase-toggle" id="togglePhaseBar">Toggle Phase Bar (On)</button>
     </div>
 
     <div class="sidebar">
       <div id="statusBadge" class="status-badge">Loading...</div>
-      <div id="actionAdvice">What you should do right now: Loading...</div>
+      <div id="sellAdvice">Sell Advice: Loading...</div>
       <h3>Live Prices & Charts</h3>
       <div id="prices"><div class="loading">Loading live prices...</div></div>
-      <div class="collapsible-section">
-        <div class="collapsible-header" onclick="this.parentElement.classList.toggle('open')">Previous Bottom Calls (click to expand)</div>
-        <div id="previousBottoms" class="collapsible-content"><strong>Loading...</strong></div>
-      </div>
-      <div class="collapsible-section">
-        <div class="collapsible-header" onclick="this.parentElement.classList.toggle('open')">Previous Top Calls (click to expand)</div>
-        <div id="previousTops" class="collapsible-content"><strong>Loading...</strong></div>
-      </div>
+      <div id="previousCalls"><strong>Previous Calls:</strong> Loading...</div>
     </div>
   </div>
 
@@ -188,26 +124,11 @@
   <div id="predictionAccuracy">Prediction vs Live: Updating...</div>
 
   <script>
-    // === MAIN CHART ===
     const ctx = document.getElementById('myChart').getContext('2d');
 
     const labels = ['2017-01', '2017-10', '2017-12', '2018-12', '2020-03', '2021-11', '2022-11', '2025-04', '2025-11', '2026-01', '2026-04', '2026-07', '2026-10', '2027-01', '2027-04', '2027-07', '2027-10', '2028-01'];
     const predictorIndex = [40, 45, 95, 10, 10, 90, 15, 25, 10, 51, null, null, null, null, null, null, null, null];
-    let predictionData = [];
-
-    // Dynamic prediction (recalculates every load based on recent momentum)
-    if (predictorIndex.length > 5) {
-      const recent = predictorIndex.slice(-5).filter(v => v !== null);
-      let last = recent[recent.length - 1];
-      let momentum = (recent[recent.length - 1] - recent[0]) / recent.length;
-      for (let i = 0; i < 24; i++) {
-        last += momentum * (1 + (Math.random() * 0.1 - 0.05));
-        last = Math.min(100, Math.max(0, last));
-        predictionData.push(last);
-      }
-    } else {
-      predictionData = [null, null, null, null, null, null, null, null, null, null, 70, 85, 95, 80, 50, 30, 15, 10];
-    }
+    const predictionData = [null, null, null, null, null, null, null, null, null, null, 70, 85, 95, 80, 50, 30, 15, 10];
 
     const chart = new Chart(ctx, {
       type: 'line',
@@ -233,13 +154,13 @@
         plugins: {
           zoom: {
             zoom: {
-              wheel: { enabled: true },
+              wheel: { enabled: false }, // Disabled wheel zoom
               pinch: { enabled: true },
-              mode: 'xy'
+              mode: 'x'
             },
             pan: {
               enabled: true,
-              mode: 'xy'
+              mode: 'x'
             }
           },
           crosshair: {
@@ -343,13 +264,13 @@
     // === ALERTS & SELL ADVICE ===
     const currentIndex = predictorIndex[predictorIndex.length - 10];
     const alertBox = document.getElementById('alertBox');
-    const actionAdvice = document.getElementById('actionAdvice');
+    const sellAdvice = document.getElementById('sellAdvice');
     const statusBadge = document.getElementById('statusBadge');
     const predictionsBox = document.getElementById('predictionsBox');
     const predictionAccuracy = document.getElementById('predictionAccuracy');
 
     let msg = 'Current: Neutral flow.';
-    let actionMsg = 'What you should do right now: Hold or buy dips.';
+    let sellMsg = 'Sell Advice: Hold or buy dips.';
     let badge = '🟡 WATCHING';
     let badgeColor = '#ffeb3b';
     let predictions = 'Predicted Top: April–July 2026 | Bottom: August–November 2026';
@@ -357,19 +278,19 @@
 
     if (currentIndex < 30) {
       msg = 'Bottom Alert: Fear low – like Nov 2025 – buy time!';
-      actionMsg = 'What you should do right now: Consider buying.';
+      sellMsg = 'Sell Advice: Too early – consider buying.';
       badge = '🟢 BUY ZONE';
       badgeColor = '#4caf50';
       saveCall('Bottom', currentIndex);
     } else if (currentIndex > 90) {
       msg = 'Heavy Sell Alert: Euphoria peak – full sell now!';
-      actionMsg = 'What you should do right now: You should be 100% out now.';
+      sellMsg = 'Sell Advice: You should be 100% out now.';
       badge = '🔴 FULL SELL';
       badgeColor = '#f44336';
       saveCall('Top', currentIndex);
     } else if (currentIndex > 80) {
       msg = 'Sell Alert: Euphoria building – start selling.';
-      actionMsg = 'What you should do right now: You should be 50–80% out now.';
+      sellMsg = 'Sell Advice: You should be 50–80% out now.';
       badge = '🟠 START SELLING';
       badgeColor = '#ff9800';
       saveCall('Top Warning', currentIndex);
@@ -378,8 +299,8 @@
     alertBox.innerHTML = `<strong>Flow Cycle Alert:</strong> ${msg}`;
     alertBox.style.background = badgeColor === '#4caf50' ? '#0e4429' : badgeColor === '#f44336' ? '#2c0e0e' : '#161b22';
 
-    actionAdvice.innerHTML = actionMsg;
-    actionAdvice.style.background = badgeColor === '#4caf50' ? '#0e4429' : badgeColor === '#f44336' ? '#2c0e0e' : '#161b22';
+    sellAdvice.innerHTML = sellMsg;
+    sellAdvice.style.background = badgeColor === '#4caf50' ? '#0e4429' : badgeColor === '#f44336' ? '#2c0e0e' : '#161b22';
 
     statusBadge.innerHTML = badge;
     statusBadge.style.background = badgeColor;
